<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kevin.funratings.deckimport.DeckImportViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/deck_code_hint"
            android:id="@+id/etDeckCodeInput"/>

        <Button
            android:id="@+id/btnDeckCodeConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etDeckCodeInput"
            app:layout_constraintStart_toStartOf="@id/etDeckCodeInput"
            app:layout_constraintEnd_toEndOf="@id/etDeckCodeInput"
            android:text="@string/confirm"
            />

        <TextView
            android:id="@+id/tvStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnDeckCodeConfirm"
            app:layout_constraintStart_toStartOf="@id/btnDeckCodeConfirm"
            app:layout_constraintEnd_toEndOf="@id/btnDeckCodeConfirm"/>

        <Button
            android:id="@+id/btnCopyDeckLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvStatusText"
            app:layout_constraintStart_toStartOf="@id/tvStatusText"
            app:layout_constraintEnd_toEndOf="@id/tvStatusText"
            android:text="@string/copy_portal_link"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/btnOpenDeckLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnCopyDeckLink"
            app:layout_constraintStart_toStartOf="@id/btnCopyDeckLink"
            app:layout_constraintEnd_toEndOf="@id/btnCopyDeckLink"
            android:text="@string/open_portal_link"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/btnShareDeckLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnOpenDeckLink"
            app:layout_constraintStart_toStartOf="@id/btnOpenDeckLink"
            app:layout_constraintEnd_toEndOf="@id/btnOpenDeckLink"
            android:text="@string/share_portal_link"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/btnOpenDeckbuilderLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btnShareDeckLink"
            app:layout_constraintStart_toStartOf="@id/btnShareDeckLink"
            app:layout_constraintEnd_toEndOf="@id/btnShareDeckLink"
            android:text="@string/open_deckbuilder_link"
            android:visibility="invisible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>